package goal;

public enum GoalType {
    DISTANCE, DURATION, FREQUENCY
}