package goal;

public enum SportType {
    RUN, SWIM, RIDE
}
